--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 language: php
+
 php:
   - "5.5"
   - "5.4"
   - "5.3"
   - "5.2"
+
+before_script:
+  - pecl install Phar
+
+script: ./vendor/bin/phpunit tests/
